<resources>
    <string name="app_name">InmobiliariaMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gimenez Valentin</string>
    <string name="nav_header_subtitle">valentingimenez1909@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="perfil">Perfil</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="inquilinos">Inquilinos</string>
    <string name="contratos">Contratos</string>
    <string name="logout">Logout</string>
    <string name="inicio">Inicio</string>
    <string name="content_desc_nro_pago">Número de pago</string>
    <string name="content_desc_fecha_pago">Fecha de pago</string>
    <string name="content_desc_id_contrato">ID de contrato</string>
    <string name="content_desc_id_pago">ID de pago</string>
    <string name="imagen_inquilino">imagen inquilino</string>

</resources>