<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Sección principal -->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_person"
            android:title="@string/perfil" />

        <item
            android:id="@+id/nav_inmuebles"
            android:icon="@drawable/ic_house"
            android:title="@string/inmuebles" />

        <item
            android:id="@+id/nav_inquilinos"
            android:icon="@drawable/ic_people"
            android:title="@string/inquilinos" />

        <item
            android:id="@+id/nav_contratos"
            android:icon="@drawable/ic_document"
            android:title="@string/contratos" />
    </group>

    <!-- Separador -->
    <item android:title="">
        <menu>
            <item
                android:id="@+id/separator"
                android:enabled="false"
                android:icon="@null"
                android:title=""
                android:visible="false"/>
        </menu>
    </item>

    <!-- Sección inferior -->
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            android:titleCondensed="Salir" />
    </group>

</menu>
